# waka-readme

./: .env.template  .gitignore  CONTRIBUTING.md  README.md  action.yml  containerfile  dockerfile  main.py  pyproject.toml
.github/workflows/: testing.yml
tests/: test_main.py
