####################
#     Metadata     #
####################

[project]
name = "waka-readme"
version = "0.3.1"
description = "Wakatime Weekly Metrics on your Profile Readme."
authors = [{ name = "Athul Cyriac Ajay", email = "athul8720@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["readme", "profile-page", "wakatime"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = ["faker>=40.19.1", "pygithub>=2.9.1", "requests>=2.34.2"]

[project.urls]
Homepage = "https://github.com/athul/waka-readme"
Documentation = "https://github.com/athul/waka-readme#readme"
Repository = "https://github.com/athul/waka-readme"
Changelog = "https://github.com/athul/waka-readme/commits/master"

#############################
#   Optional Dependencies   #
#############################

[project.optional-dependencies]
extra = ["loguru>=0.7.3", "python-dotenv>=1.2.2"]

#############################
# Development Dependencies  #
#############################

[tool.pdm.dev-dependencies]
tooling = ["bandit>=1.9.4", "black>=26.5.1", "ruff>=0.15.15", "pyright>=1.1.409"]

####################
#  Configurations  #
####################

[tool.bandit]
exclude_dirs = [".github", "tests", ".venv", ".vscode"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.pyright]
exclude = ["**/__pycache__", ".venv/"]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["**/__pycache__"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "W",
    "E",
    # mccabe
    # C90
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
]

[tool.ruff.lint.isort]
# case-sensitive = true
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.pydocstyle]
convention = "google"
